Fixing list books layout problem

--- a/src/style/MyReads.css
+++ b/src/style/MyReads.css
@@ -45,29 +45,30 @@
     flex-wrap: wrap;
 }
 
-.mr-book {
-    height: 193px;
-    width: 128px;
+.mr-book-list li {
     padding: 10px 15px;
     text-align: left;
 }
 
+.mr-book {
+    width: 140px;
+}
+
 .mr-book-image {
-    height: 193px;
-    width: 128px;
-    background: aquamarine;
+    box-shadow: 0 3px 60px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    background: #eee;
+    /*width: 128px;*/
+    /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
 }
 
 .mr-book-title {
-    padding: 4px;
-    font-size: small;
-    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 6px;
 }
 
 .mr-book-author {
-    padding: 4px;
-    font-size: small;
-    font-weight: lighter;
+    font-size: 0.8em;
+    color: #999;
 }
 
 .mr-open-search {
@@ -80,10 +81,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: #2e7d32;
-    background-image: url('../icons/add.svg');
-    background-repeat: no-repeat;
-    background-position: center;
+    background: #2e7d32 url('../icons/add.svg') no-repeat center;
     background-size: 28px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     font-size: 0;
@@ -117,10 +115,7 @@
     left: 15px;
     width: 50px;
     height: 53px;
-    background: white;
-    background-image: url('../icons/arrow-back.svg');
-    background-position: center;
-    background-repeat: no-repeat;
+    background: white url('../icons/arrow-back.svg') no-repeat center;
     background-size: 28px;
     font-size: 0;
 }
@@ -143,13 +138,11 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #60ac5d;
-    background-image: url('../icons/arrow-drop-down.svg');
-    background-repeat: no-repeat;
-    background-position: center;
+    background: #60ac5d url('../icons/arrow-drop-down.svg') no-repeat center;
     background-size: 20px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
 .book-shelf-changer select {
     width: 100%;
     height: 100%;
